Imported from https://AndreyS1991@github.com/AndreyS1991/february.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/AndreyS1991
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/AndreyS1991
+	label-Verified = -1..+1 group user/AndreyS1991
+	push = group user/AndreyS1991
+	read = group user/AndreyS1991
+	rebase = group user/AndreyS1991
+	removeReviewer = group user/AndreyS1991
+	submit = group user/AndreyS1991
+[access "refs/heads/*"]
+	create = group user/AndreyS1991
+	push = +force group user/AndreyS1991
+	pushMerge = group user/AndreyS1991
+	read = group user/AndreyS1991
+[access "refs/tags/*"]
+	push = group user/AndreyS1991
+	push = +force group user/AndreyS1991
